# hexcurse

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.Irix  README.md  config.h.in  configure  configure.ac  configure.in  mkinstalldirs
include/: hex.h  hgetopt.h
man/: Makefile.am  Makefile.in  hexcurse.1
src/: Makefile.am  Makefile.in  acceptch.c  color.c  file.c  getopt.c  hexcurse.c  llist.c  screen.c  stack.c
